# AssinaturaDigital

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
.github/workflows/: publish.yml  sanitizers.yml
include/: CMSSigner.h  CryptoInitializer.h  OpenSSLUtils.h  PKCS12Parser.h
include/Data/POCO/: PKCS12POCO.h
src/: CMSSigner.cpp  CMSSigner.h  CryptoInitializer.cpp  OpenSSLUtils.cpp  PKCS12Parser.cpp  PKCS12Parser.h  main.cpp
test_package/: CMakeLists.txt  conanfile.py
test_package/resources/arquivos/: signature.p7s  sinature.p7s
test_package/resources/cmake/: assinaturadigitalConfig.cmake  assinaturadigitalTargets.cmake.in
test_package/src/: example.cpp
test_package/src/UnitTests/include/: AssinaturaDigitalMacros.h  CMSSignerTest.h  OpenSSLUtilsTest.h  PKCS12ParserTest.h
test_package/src/UnitTests/src/: CMSSignerTest.cpp  OpenSSLUtilsTest.cpp  PKCS12ParserTest.cpp
